# quickscope

./: Makefile.am  README  README.md  Repo_clean  TODO  adjuster.c  adjuster.h  adjusterBool.c  adjusterBoolean.c  adjusterFloat.c  adjusterGroup.c  adjusterSelector.c  adjusterType.c  adjuster_priv.h  alsaCapture.c  app.c  app.h  app_arg.c  assert.c  assert.h  base.h  bootstrap  configure.ac  controller.c  controller.h  controller_priv.h  cscope.out  drawsync.c  drawsync.h  fd.c  fd.h  group.c  group.h  idle.c  interval.c  interval.h  iterator.c  iterator.h  launcher.c  lorenz.c  (+42 more)
examples/: 00_sin.c  05_sin_lessComments.c  08_saw.c  13_lissajous.c  24_lorenz.c  40_my_ode_source.c  44_my_ode_source_2win.c  55_pulseCapture_highLatency.c  60_alsaCapture.c  65_rossler_3win.c  GNUmakefile  README  demo_launcher  run_list  sin.c  sin_lessComments.c
lib/: Assert.h  Makefile.am  README  adjuster.c  adjusterBool.c  adjusterGroup.c  adjusterSelector.c  app.c  app_priv.h  assert.c  bottom_quickscope.h  controller.c  controller.h  drawsync.c  group.c  group.h  interval.c  launcher.c  lib_main.c  lorenz.c  pulseCapture.c  quickscope.pc.in  rk4Source.c  rossler.c  rungeKutta.c  rungeKutta.h  soundFile.c  source.c  source.h  sourceParticular.h  source_frameRate.c  swipe.c  timer.c  timer_priv.h  top_quickscope.h  trace.c  trace.h  trace_priv.h  win.h  win_fadeDraw.c  (+5 more)
tests/: Makefile.am  Quickplot  Quickplot.bash  README  alsa_capture_print.c  alsa_info.c  app_arg.c  circle.c  controller.c  idle.c  lorenz.c  lorenz_print.c  non_master_print.c  ode.c  ode_3wins.c  ode_print.c  qsGtkWidget.c  qsSource.c  quickplot.bash  quickscope.h  rk4_print.c  saw.c  saw_print.c  sin.c  sin_sweep.c  soundFile.c  soundFile_print.c  source.c  urandom.c
